package iuh.fit.se.bai02_observerdesignpattern.BaiToanQLTask;

public interface TeamMember {
    void update(String taskName, String status);
}

